Fix ckeditor issue within drag/drop paragraphs

--- a/e3_paragraphs.libraries.yml
+++ b/e3_paragraphs.libraries.yml
@@ -9,4 +9,4 @@ e3-paragraphs-admin-assets:
     js/draggable-items.js: {}
   dependencies:
     - core/jquery
-    - core/jquery.once
+    - core/ckeditor
