--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "gulp-uglify": "^1.5.4",
     "sassdoc": "^2.1.20",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "dom-autoscroller": "^2.2.7"
   }
 }
